--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <version>47.0</version>
+<?xml version="1.0" encoding="UTF-8"?><Package xmlns="http://soap.sforce.com/2006/04/metadata">
+    <version>49.0</version>
     <types>
         <members>BotController</members>
         <members>BotField</members>
@@ -10,21 +9,82 @@
         <members>BotMessageButton</members>
         <members>BotRecord</members>
         <members>BotResponse</members>
+        <members>EinsteinVisionController</members>
         <name>ApexClass</name>
+    </types>
+    <types>
+        <members>HeatMap</members>
+        <members>HeatMapMock</members>
+        <name>ApexPage</name>
+    </types>
+    <types>
+        <members>PushNotificationTrigger</members>
+        <members>RejectDuplicateFavorite</members>
+        <name>ApexTrigger</name>
+    </types>
+    <types>
+        <members>Account.New_AP1</members>
+        <name>ApprovalProcess</name>
     </types>
     <types>
         <members>Bot_Command__c.Active__c</members>
         <members>Bot_Command__c.Apex_Class__c</members>
         <members>Bot_Command__c.Pattern__c</members>
         <members>Bot_Command__c.Sample_Utterance__c</members>
+        <members>New_Object__c.Test_Field__c</members>
+        <members>Test_Object__c.Test_Field__c</members>
         <name>CustomField</name>
     </types>
     <types>
         <members>Bot_Command__c</members>
+        <members>New_Object__c</members>
+        <members>Test_Object__c</members>
         <name>CustomObject</name>
     </types>
     <types>
+        <members>New_Object__c</members>
+        <members>Test_Object__c</members>
+        <name>CustomTab</name>
+    </types>
+    <types>
+        <members>Account-Account %28Marketing%29 Layout</members>
+        <members>Account-Account %28Sales%29 Layout</members>
+        <members>Account-Account %28Support%29 Layout</members>
+        <members>Account-Account Layout</members>
+        <members>New_Object__c-New Object Layout</members>
+        <members>Test_Object__c-Test Object Layout</members>
+        <name>Layout</name>
+    </types>
+    <types>
         <members>Bot_Command__c.All</members>
+        <members>New_Object__c.All</members>
+        <members>Test_Object__c.All</members>
         <name>ListView</name>
+    </types>
+    <types>
+        <members>Admin</members>
+        <members>Analytics Cloud Integration User</members>
+        <members>Analytics Cloud Security User</members>
+        <members>ContractManager</members>
+        <members>Cross Org Data Proxy User</members>
+        <members>Custom%3A Marketing Profile</members>
+        <members>Custom%3A Sales Profile</members>
+        <members>Custom%3A Support Profile</members>
+        <members>Force%2Ecom - App Subscription User</members>
+        <members>Force%2Ecom - Free User</members>
+        <members>Identity User</members>
+        <members>MarketingProfile</members>
+        <members>Minimum Access - Salesforce</members>
+        <members>Partner App Subscription User</members>
+        <members>Read Only</members>
+        <members>SolutionManager</members>
+        <members>Standard</members>
+        <members>StandardAul</members>
+        <members>Work%2Ecom Only User</members>
+        <name>Profile</name>
+    </types>
+    <types>
+        <members>Account.FU</members>
+        <name>WorkflowFieldUpdate</name>
     </types>
 </Package>
